--- a/src/ProfileContext/Domain/Inanna.ProfileContext.Domain.csproj
+++ b/src/ProfileContext/Domain/Inanna.ProfileContext.Domain.csproj
@@ -6,4 +6,8 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\..\Core\Inanna.Core.csproj" />
+  </ItemGroup>
+
 </Project>
