Small changes to the domain model and added Database scheme

--- a/src/LibraryContext/Api/appsettings.json
+++ b/src/LibraryContext/Api/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "Database": "Server=(localdb)\\mssqllocaldb;Database=InannaLibraryContextDatabase;Trusted_Connection=True;MultipleActiveResultSets=true"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
