--- a/src/LibraryContext/Api/appsettings.json
+++ b/src/LibraryContext/Api/appsettings.json
@@ -2,6 +2,7 @@
   "ConnectionStrings": {
     "Database": "Server=(localdb)\\mssqllocaldb;Database=InannaLibraryContextDatabase;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
+  "ImageRootPath": "./images",
   "Logging": {
     "LogLevel": {
       "Default": "Information",
@@ -11,7 +12,7 @@
   "AllowedHosts": "*",
   "Kestrel": {
     "EndpointDefaults": {
-      "Protocols": "Http2"
+      "Protocols": "Http1AndHttp2"
     }
   }
 }
