--- a/src/LibraryContext/Application/Inanna.LibraryContext.Application.csproj
+++ b/src/LibraryContext/Application/Inanna.LibraryContext.Application.csproj
@@ -18,4 +18,9 @@
     <Folder Include="Features\Mangas\Queries\List\" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Include="FluentValidation" Version="11.9.2" />
+    <PackageReference Include="FluentValidation.DependencyInjectionExtensions" Version="11.9.2" />
+  </ItemGroup>
+
 </Project>
