Working Create Manga, made normal domain entities, made event sourcing, in plans to make projections. Used mongodb for storing events.

--- a/src/LibraryContext/Api/appsettings.json
+++ b/src/LibraryContext/Api/appsettings.json
@@ -1,8 +1,9 @@
 {
   "ConnectionStrings": {
-    "Database": "Server=(localdb)\\mssqllocaldb;Database=InannaLibraryContextDatabase;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "ProjectionsDb": "Server=(localdb)\\mssqllocaldb;Database=InannaLibraryContextDatabase;Trusted_Connection=True;MultipleActiveResultSets=true",
+    "EventsDb": "mongodb://localhost:27017/"
   },
-  "ImageRootPath": "./images",
+  "FileRootPath": "./files",
   "Logging": {
     "LogLevel": {
       "Default": "Information",
