--- a/src/LibraryContext/Infrastructure/Inanna.LibraryContext.Infrastructure.csproj
+++ b/src/LibraryContext/Infrastructure/Inanna.LibraryContext.Infrastructure.csproj
@@ -10,4 +10,8 @@
     <ProjectReference Include="..\Application\Inanna.LibraryContext.Application.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Include="MongoDB.Driver" Version="2.28.0" />
+  </ItemGroup>
+
 </Project>
