Added automatic creation and updating of projections based on events

--- a/src/LibraryContext/Application/Inanna.LibraryContext.Application.csproj
+++ b/src/LibraryContext/Application/Inanna.LibraryContext.Application.csproj
@@ -11,6 +11,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Folder Include="Exceptions\" />
     <Folder Include="Features\Mangas\Commands\Delete\" />
     <Folder Include="Features\Mangas\Commands\Update\" />
     <Folder Include="Features\Mangas\Dtos\" />
