Switched from Grpc to webapi

--- a/src/LibraryContext/Api/appsettings.json
+++ b/src/LibraryContext/Api/appsettings.json
@@ -1,7 +1,7 @@
 {
   "ConnectionStrings": {
     "ProjectionsDb": "Server=(localdb)\\mssqllocaldb;Database=InannaLibraryContextDatabase;Trusted_Connection=True;MultipleActiveResultSets=true",
-    "EventsDb": "mongodb://localhost:27017/"
+    "EventsDb":  "Server=(localdb)\\mssqllocaldb;Database=InannaLibraryContextDatabase;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
   "FileRootPath": "./files",
   "Logging": {
@@ -10,10 +10,5 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*",
-  "Kestrel": {
-    "EndpointDefaults": {
-      "Protocols": "Http1AndHttp2"
-    }
-  }
+  "AllowedHosts": "*"
 }
